# Messanger

./: .clang-format  .clang-format-ignore  .clang-tidy  .clang-tidy.save  .dockerignore  .gitignore  .gitmodules  .lcovrc  CMakeLists.txt  CMakePresets.json  README.md  auth-docs.html  auth.html  chat.html  coverage.info  docker-compose.yml  fix-submodules.sh  index.html  main.cpp  media.qrc  message.html  run-clang.sh  sonar-project.properties  vcpkg.json  vector.toml
Backend/ApigateWay/: CMakeLists.txt  cmake_install.cmake  main.cpp
Backend/ApigateWay/include/: GatewayMetrics.h  JWTVerifier.h  JwtUtils.h  Logger.h  MetricsTracker.h  ProxyRepository.h  RealHttpClient.h  RequestDTO.h  gatewayserver.h  proxyclient.h  ratelimiter.h  websocketbridge.h
Backend/ApigateWay/src/: AuthVerifier.h  JwtUtils.cpp  Logger.cpp  gatewayserver.cpp  main.cpp  proxyclient.cpp  proxyclient.h  ratelimiter.h  websocketbridge.cpp
Backend/ApigateWay/tests/: CMakeLists.txt  test_gatewayserver.cpp  test_middlewares.cpp
Backend/AuthService/: CMakeLists.txt  Dockerfile  cmake_install.cmake  main.cpp  openapi.yaml
Backend/AuthService/benchmarks/: CMakeLists.txt  README.md  cqrs_benchmark.cpp
Backend/AuthService/include/: JwtUtils.h  PasswordService.h  RegisterRequest.h  authcontroller.h  authmanager.h  server.h
Backend/AuthService/private_keys/: private_key.pem
Backend/AuthService/src/: JwtGenerator.cpp  JwtUtils.cpp  PasswordService.cpp  authcontroller.cpp  authmanager.cpp  main.cpp  server.cpp
Backend/AuthService/tests/: CMakeLists.txt  test_authmanager.cpp  test_authserver.cpp  test_protected_authmanager.cpp
Backend/ChatService/: CMakeLists.txt  Dockerfile  cmake_install.cmake  main.cpp  openapi.yaml
Backend/ChatService/include/: NetworkManager.h  TokenService.h  chatmanager.h  controller.h  database.h  server.h
Backend/ChatService/src/: JwtAuthoritizer.cpp  NetworkManager.cpp  TokenService.cpp  chatcontroller.cpp  chatmanager.cpp  chatserver.cpp  controller.cpp  database.cpp  main.cpp  server.cpp
Backend/ChatService/tests/: CMakeLists.txt  test_chatmanager.cpp  test_chatserver.cpp  test_controller.cpp
Backend/Gateway/: CMakeLists.txt  Dockerfile  main.cpp  prometheus.yml
Backend/Gateway/benchmarks/: CMakeLists.txt  README.md  request_responce_pattern_benchmark.cpp
Backend/Gateway/include/: ForwardRequestDTO.h  GatewayController.h  GatewayMetrics.h  JWTVerifier.h  MetricsTracker.h  RealHttpClient.h  RequestDTO.h  RetryOptions.h  gatewayserver.h  proxyclient.h  ratelimiter.h  websocketbridge.h
Backend/Gateway/src/: GatewayController.cpp  GatewayMetrics.cpp  JWTVerifier.cpp  MetricsTracker.cpp  RateLimiter.cpp  gatewayserver.cpp  main.cpp  proxyclient.cpp  websocketbridge.cpp
Backend/Gateway/tests/: CMakeLists.txt  main.cpp  test_gatewayserver.cpp  test_middlewares.cpp
Backend/GenericRepository/benchmarks/: CMakeLists.txt  README.md  batcher_benchmark.cpp  benchmark_entity.cpp  benchmark_latency.cpp  benchmarks_query.cpp  build_entity.cpp  main.cpp  preparedStatements_benchmark.cpp  redis_cache_benchmark.cpp  thread_pool_benchmark.cpp
Backend/MessageService/: CMakeLists.txt  Dockerfile  cmake_install.cmake  main.cpp  openapi.yaml
Backend/MessageService/Controller/: controller.cpp  controller.h
Backend/MessageService/Headers/: JwtUtils.cpp  JwtUtils.h  Message.h  MessageStatus.h  NetworkManager.cpp  NetworkManager.h
Backend/MessageService/MessageDataBase/: messagedatabase.cpp  messagedatabase.h
Backend/MessageService/MessageManager/: MessageManager.cpp  MessageManager.h
Backend/MessageService/MessageWorker/: messageworker.cpp  messageworker.h
Backend/MessageService/NotificationManager/: notificationmanager.cpp  notificationmanager.h
Backend/MessageService/RabbitMQClient/: rabbitmqclient.cpp  rabbitmqclient.h
Backend/MessageService/Server/: server.cpp  server.h
Backend/MessageService/include/: controller.h  server.h
Backend/MessageService/src/: JwtUtils.cpp  QueuePublisher.cpp  QueueSubscriber.cpp  controller.cpp  main.cpp  messageworker.cpp  server.cpp
Backend/MessageService/tests/: CMakeLists.txt  main.cpp  test_controller.cpp  test_messagemanager.cpp  test_server.cpp
Backend/NotificationService/: CMakeLists.txt  Dockerfile  cmake_install.cmake  main.cpp
Backend/NotificationService/Headers/: JwtUtils.h  (+2 more)
Backend/common_mocks/: CMakeLists.txt  mocks.h
Frontend/: CMakeLists.txt  Dockerfile  cmake_install.cmake  main.cpp  tidy-report.txt
Frontend/config/: domains.txt
Frontend/forms/: mainwindow.ui
Frontend/include/: DataInputService.h  DeleteMessageResponce.h  JsonService.h  MessageActionPanel.h  MessageListView.h  MessageToken.h  NewMessageResponceHandler.h  OpenResponceHandler.h  OutsideClickFilter.h  ReadMessageHandler.h  RealSocket.h  RedisClient.h  clickoutsideclosablelistview.h  mainwindow.h  model.h  presenter.h  report.txt  utils.h  utilsui.h
Frontend/src/: ClickOutsideClosableListView.cpp  DefaultUseCaseRepository.cpp  DelegatorsFactory.cpp  Handlers.cpp  IMessageListView.cpp  JsonService.cpp  MessageActionPanel.cpp  MessageListView.cpp  OutsideClickFilter.cpp  RealSocket.cpp  RedisClient.cpp  SocketHandlerRegistry.cpp  Themes.cpp  TokenFactory.cpp  UseCaseRepository.cpp  datainputservice.cpp  main.cpp  mainwindow.cpp  model.cpp  presenter.cpp  utils.cpp  utilsui.cpp
Frontend/tests/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  DataInputService_tests.cpp  cmake_install.cmake  main.cpp  model_tests.cpp  presenter_tests.cpp  test_chatitemdelegate.cpp  test_chatmanager.cpp  test_datainputservice.cpp  test_datamanager.cpp  test_messagemanager.cpp  test_model.cpp  test_presenter.cpp  test_sessionmanager.cpp  test_socketmanager.cpp  test_usermanager.cpp  test_usermodel.cpp
common/Metrics/: CMakeLists.txt
common/Network/: CMakeLists.txt
common/NetworkManager/: CMakeLists.txt
common/Persistence/: CMakeLists.txt
common/RabbitMQClient/: CMakeLists.txt
common/RedisCache/: CMakeLists.txt
common/ThreadPool/: CMakeLists.txt
common/constants/: CMakeLists.txt
common/entities/: CMakeLists.txt  IdField.h  Utils.h
(+718 files in other folders)
